# Blue

./: CMakeLists.txt  Client.pro  Client.pro.user.7451c08  Client.pro.user.e01d39a  Client.pro.user.e4d0117  Client.pro.user.f2ed464  Client.pro.user.f2ed464.22  Collections.h  README.md  README.txt  askselect.cpp  askselect.h  cmakeBuildVs2019.bat  conanfile.txt  dijkstrasalg.cpp  dijkstrasalg.h  dijkstrasalg1.cpp  edge.cpp  edge.h  gamelogic.cpp  gamelogic.h  graphVisualGreatOne.pro  graphVisualGreatOne.pro.user.e01d39a  graphwidget.cpp  graphwidget.h  graphwidget.h.autosave  installConanQt.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindowchangingpresenter.cpp  mainwindowchangingpresenter.h  mainwindowforcreatemultigame.cpp  mainwindowforcreatemultigame.cpp.autosave  mainwindowforcreatemultigame.h  mainwindowforcreatemultigame.ui  mainwindowforenterexistinggame.cpp  mainwindowforenterexistinggame.cpp.autosave  (+27 more)
JsonGraphs/: ourmap01.json  ourmap02.json
Model/: dijkstrasalg.cpp  dijkstrasalg.h  edge.cpp  edge.h  gamelogic.cpp  gamelogic.h  isocketservice.h  istarter.h  node.cpp  node.h  socketservice.cpp  socketservice.h  sockettest.cpp  sockettest.h  starter.cpp  starter.h  strategy.cpp  strategy.cpp.autosave  strategy.h  structs.cpp  structs.h  train.h
Presenter/: createmultiplayerpresenter.cpp  createmultiplayerpresenter.h  enterexistinggamepresenter.cpp  enterexistinggamepresenter.h  mainwindowchangingpresenter.cpp  mainwindowchangingpresenter.h  singleplayerpresenter.cpp  singleplayerpresenter.h
Render/: graphwidget.cpp  (+3 more)
(+12 files in other folders)
